--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ default: &default
 
 development:
   <<: *default
-  database: playoff_ff_development
+  database: playoff_ff_development_19
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
