--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,8 @@
 default: &default
   adapter: postgresql
   encoding: utf8
-  username:
+  username: stevetuckner
+  password: asdfasdf
   host: localhost
 
 development:
